# ros_dev

./: .gitignore  Dockerfile  README.md  compile_and_test.sh  docker_robot_guide.sh  quick_build.sh  robot_commands.sh
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/autonomous_robot/share/autonomous_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_robot/share/autonomous_robot/cmake/: autonomous_robotConfig.cmake
install/autonomous_robot_bringup/lib/autonomous_robot_bringup/: simple_teleop  twist_stamper
install/autonomous_robot_bringup/share/autonomous_robot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_robot_description/share/autonomous_robot_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autonomous_robot_gazebo/share/autonomous_robot_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/autonomous_robot_system_tests/share/autonomous_robot_system_tests/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/minibot/share/minibot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/minibot/share/minibot/description/: camera.xacro
install/ros2_fundamentals_examples/lib/ros2_fundamentals_examples/: minimal_cpp_publisher
log/: latest_build
src/autonomous_robot/autonomous_robot/: CMakeLists.txt  package.xml
src/autonomous_robot/autonomous_robot_bringup/: setup.cfg  setup.py
src/autonomous_robot/autonomous_robot_description/: CMakeLists.txt  package.xml
src/autonomous_robot/autonomous_robot_description/urdf/mech/: mecanum_wheel.urdf.xacro
src/autonomous_robot/autonomous_robot_description/urdf/sensors/: lidar.urdf.xacro
src/autonomous_robot/autonomous_robot_gazebo/: package.xml  setup.cfg  setup.py
src/autonomous_robot/autonomous_robot_gazebo/launch/: rosmaster_x3_gazebo.launch.py  rosmaster_x3_gazebo_only.launch.py  rosmaster_x3_simple.launch.py
src/autonomous_robot/autonomous_robot_system_tests/: package.xml  setup.cfg  setup.py
src/minibot/: setup.cfg  setup.py
src/minibot/description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_main.xacro
src/minibot/launch/: bridge_camera.launch.py  bringup_lidar.launch.py  sim_camera.launch.py  sim_lidar.launch.py  sim_spawn_robot.launch.py  sim_world.launch.py  sim_world_robot.launch.py
src/minibot/rviz/: display.rviz  sim_lidar.rviz  sim_lidar_camera.rviz  sim_lidar_min.rviz
src/minibot/worlds/: playground.sdf
src/ros2_fundamentals_examples/: CMakeLists.txt  package.xml
src/ros2_fundamentals_examples/ros2_fundamentals_examples/: py_minimal_publisher.py  py_minimal_subscriber.py
src/ros2_fundamentals_examples/src/: cpp_minimal_publisher.cpp  cpp_minimal_subscriber.cpp
(+19 files in other folders)
