<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_robot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation support for the robot, including worlds and launch files</description>
  <maintainer email="jorgealonsovasquez@hotmail.com">alonso</maintainer>
  <license>BSD-3-Clause</license>

  <depend>trajectory_msgs</depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>